test/integration/bad/embedded_laplace/missing_args5.stan

generated quantities {
  vector[2] theta = laplace_latent_rng();
}
